Adding a second html page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 	<nav class="nav">
 	<p><a href="#La Era de Oro">La Era de Oro</a> |                                      
 	<a href="#Busquedas">Búsquedas </a>| 
-	<a href="#Realitas">Realitas</a> </p>
+	<a href="#Realitas">Realitas</a>|
+	<a href="cont.html">Inocencia</a>|
+	<a href="cont.html">Ira</a>
+	</p>
 	</nav>
 	
 	
