--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	</div>
  
 	<nav class="nav">
-	<p><a href="#La Era de Oro">La Era de Oro</a> |                                      
+	<p><a href="cont.html">La Era de Oro</a> |                                      
 	<a href="#Busquedas">Búsquedas </a>| 
 	<a href="#Realitas">Realitas</a>|
 	<a href="cont.html">Inocencia</a>|
-	<a href="#Busquedas">Ira</a>
+	<a href="cont.html">Ira</a>
 	</p>
 	</nav>
 	
