--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</div>
  
 	<nav class="nav">
-	<p><a href="cont.html">La Era de Oro</a> |                                      
+	<p><a href="#La Era de Oro">La Era de Oro</a> |                                      
 	<a href="#Busquedas">Búsquedas </a>| 
 	<a href="#Realitas">Realitas</a>|
 	<a href="cont.html">Inocencia</a>|
