Modifying the story

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 	observaba, al destruir una figura, que podría con todas las demás, pero sabe que al hacer ésto, perdería de vista a la inocente figura que en un principio lo atrajo.
 	El niño, quien, al obtener experiencia en combate, crece y se vuelve mucho más fuerte, y finalmente decide correr tras la figura inocente. Habiendo corrido tanto, 
 	el niño, ahora un jóven fuerte, adquiere velocidad inigualable, y alcanza a la figura blanca, tomándola de la mano. Al hacer ésto, el jóven y fuerte tributo deja de
-	sentir su cuerpo, y es llevado a otro mundo, cubierto por nieve y blancura, tal y como la figura que lo trajo hasta acá.
+	sentir su cuerpo, y es llevado a otro mundo, cubierto por nieve y blancura, tal y como la figura que lo trajo hasta ese lugar.
 	</p>
 
  
