--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 	<p><a href="#La Era de Oro">La Era de Oro</a> |                                      
 	<a href="#Busquedas">Búsquedas </a>| 
 	<a href="#Realitas">Realitas</a>|
-	<a href="#Realitas">Realitas2</a>|
+	<a href="cont.html">Inocencia</a>|
+	<a href="cont.html">Ira</a>
 	</p>
 	</nav>
 	
