adding some inline cdd

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
 	<h3>Guerras del Destino</h3>
 	</div>
  
-	<nav class="nav">
+	<nav style="height:50px;
+width:350px;
+font-size:-20px;
+text-align:center;
+text-decoration:underline;
+background-color:#FFFFFF;
+margin-left:300px;
+position:fixed;">
 	<p><a href="#La Era de Oro">La Era de Oro</a> |                                      
 	<a href="#Busquedas">Búsquedas </a>| 
 	<a href="#Realitas">Realitas</a>|
