Addind link to second html

--- a/index.html
+++ b/index.html
@@ -17,19 +17,10 @@
 	<h3>Guerras del Destino</h3>
 	</div>
  
-	<nav style="height:50px;
-width:350px;
-font-size:-20px;
-text-align:center;
-text-decoration:underline;
-background-color:#FFFFFF;
-margin-left:300px;
-position:fixed;">
+	<nav class="nav">
 	<p><a href="#La Era de Oro">La Era de Oro</a> |                                      
 	<a href="#Busquedas">Búsquedas </a>| 
 	<a href="#Realitas">Realitas</a>|
-	<a href="cont.html">Inocencia</a>|
-	<a href="cont.html">Ira</a>
 	</p>
 	</nav>
 	
@@ -104,6 +95,7 @@ position:fixed;">
 	sentir su cuerpo, y es llevado a otro mundo, cubierto por nieve y blancura, tal y como la figura que lo trajo hasta ese lugar.
 	</p>
 
+	<a href="cont.html">Siguiente página</a>
  
  </body>
 </html>
