starting second html story

--- a/cont.html
+++ b/cont.html
@@ -17,6 +17,11 @@
 	<h3>Guerras del Destino</h3>
 	</div>
 	
+	<h2>Inocencia</h2>
+	<hr>
+	<p class="font">
+	Este en el inicio de la inocencia.
+	</p>
 
 
 
