--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 	<p><a href="#La Era de Oro">La Era de Oro</a> |                                      
 	<a href="#Busquedas">Búsquedas </a>| 
 	<a href="#Realitas">Realitas</a>|
+	<a href="cont.html">Inocencia</a>|
+	<a href="cont.html">Ira</a>
 	</p>
 	</nav>
 	
@@ -95,7 +97,7 @@
 	sentir su cuerpo, y es llevado a otro mundo, cubierto por nieve y blancura, tal y como la figura que lo trajo hasta ese lugar.
 	</p>
 
-	<a href="cont.html">Siguiente página</a>
+
  
  </body>
 </html>
