--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
 	<h3>Guerras del Destino</h3>
 	</div>
  
+ <div>
 	<nav class="nav">
 	<p><a href="#La Era de Oro">La Era de Oro</a> |                                      
 	<a href="#Busquedas">Búsquedas </a>| 
 	<a href="#Realitas">Realitas</a>|
-	<a href="cont.html">Inocencia</a>|
+	<a href="cont.html" target=_blank>Inocencia</a>|
 	<a href="cont.html">Ira</a>
 	</p>
 	</nav>
-	
+	</div>
 	
 	<a name="La Era de Oro"/>
-	<h2>La Era de Oro</h2>
-	<hr>
+	<h2 class="chapterTitle">La Era de Oro</h2>
+	<hr class="black">
 	<p class="font">
 	Ya había pasado bastante tiempo desde aquel último entonces donde sintió miedo, desesperación, y desamparo. Ya había pasado bastante tiempo desde que
 	no pasa hambre, ya había pasado bastante tiempo desde que no saborea la injusticia de la vida. Ya había pasado bastante tiempo, ya había pasado 
-	<span>demasiado</span> tiempo.</p>
+	<span class="speech font">demasiado</span> tiempo.</p>
 	
 	<p class="font">Dentro de la oscuridad total, el anciano se vale de su memorización de sus entornos para lograr levantarse. Alcanza su bastón y todavía, en espesas
 	tinieblas, llega hasta su conocido y frecuentado balcón. El anciano estira su mano y la lleva hasta aquella sedosa sábana, y con incertidumbre, duda
 	y miedo, la toma y la aparta hacia un lado. La luz del sol acaricia su cara, y mientras los primeros sonidos de risa alcanzan sus oidos, el anciano
-	pierde su ansiedad, y lentamente cierra sus ojos. <span>Éste no será nuestro final</span> ,suspira el anciano.</p>
+	pierde su ansiedad, y lentamente cierra sus ojos. <span class="oldMan">Éste no será nuestro final</span> ,suspira el anciano.</p>
 	
 	<p class="font">Al correr las sábanas que bloqueaban la luz del sol, un cuarto dorado se revela, un cuarto digno de un señor victorioso y audaz. El anciano ignora
 	su cuarto, y dirige toda su atención a quienes están debajo de su balcón. Lo primero que nota son aquellas grandes banderas cuyo logo eran dos llaves
@@ -48,14 +49,14 @@
 	
 	<p class="font">La tierra de las llaves cruzadas era un poblado pacífico y feliz, donde reinaba el bien, las cabañas estaban repletas de oro, y solo existía
 	la felicidad y el gozo. El anciano, feliz por su tierra, vuelve al interior de su cuarto y camina hacia un pequeño libro ubicado sobre un pedestal.
-	<span>Fate</span> leyó en voz baja el anciano, de la cara del libro, mientras lo abre y observa la única hoja que éste poseía. En ella, aparecían dos
-	llavez cruzadas, seguidas de la imagen de un león. El anciano, angustiado, cierra el libro, y se dirige hacia sus guardias. <span>Encuentren al
-	tributo</span>, ordena el anciano, y mientras nos guardias se alejan, el anciano se repite a sí mismo, <span>Éste no será nuestro final.</span>
+	<span class="fate">Fate</span> leyó en voz baja el anciano, de la cara del libro, mientras lo abre y observa la única hoja que éste poseía. En ella, aparecían dos
+	llavez cruzadas, seguidas de la imagen de un león. El anciano, angustiado, cierra el libro, y se dirige hacia sus guardias. <span class="oldMan">Encuentren al
+	tributo</span>, ordena el anciano, y mientras nos guardias se alejan, el anciano se repite a sí mismo, <span class="oldMan">Éste no será nuestro final.</span>
 	</p>
 	</p>
 	
 	<a name="Busquedas"/>
-	<h2>Búsquedas</h2>
+	<h2 class="chapterTitle">Búsquedas</h2>
 	<hr>
 	<p class="font">
 	Un pequeño niño de pelo amarillo y ojos azules se encuentra en el punto más alto del pueblo de las llaves cruzadas, donde se también se encuentra
@@ -71,12 +72,12 @@
 	<p class="font">
 	Mientras se preguntaba el por qué de las estatuas, el niño es tomado de los hombros por dos grandes hombres con armadura, quienes llevan al niño a
 	las afueras del pueblo de las llaves cruzadas. El anciano, quien esperaba al niño a la salida, toma al niño de los hombros y le murmura al oído: 
-	<span>Vé, y haznos de oro de nuevo</span>. Seguido de un brusco empujón hacia las afueras del pueblo, el niño se encuentra en las afueras, en la tierra
-	prohibida, en la tierra conocida como <span>Realitas</span>.
+	<span class=oldMan>Vé, y haznos de oro de nuevo</span>. Seguido de un brusco empujón hacia las afueras del pueblo, el niño se encuentra en las afueras, en la tierra
+	prohibida, en la tierra conocida como <span class="fate">Realitas</span>.
 	</p>
 	
 	<a name="Realitas"/>
-	<h2>Realitas</h2>
+	<h2 class="chapterTitle">Realitas</h2>
 		<hr>
 	<p class="font">Realitas era cualquier espacio de tierra que no estaba dentro del pueblo de las llavez cruzadas. Realitas era triste, callada, y no mostraba señales de vida.
 	Esparcida por toda Realitas, habían otros pueblos cubiertos por nubes grises, nadie en el pueblo de las llaves cruzadas conocía ninguno de los otros pueblos,
@@ -89,7 +90,7 @@
 	<p class="font">
 	Buscando aventura donde la encuentre, el tributo corre por todo Realitas, guiandose por la estatuas que iba encontrando en el camino. El niño deja de correr
 	cuando se encuentra con una niña que brillaba con una luz ténue e inocente. El niño se acerca poco a poco a la niña, cuando ésta es atacada por un grupo de leónes,
-	quienes luego adaptan una forma humana. Las figuras empiezan a correr tras el niño y la figura. El niño saca su espada de madera de jueguete, la cual, ante el sentido
+	quienes luego adaptan una forma humana. Las figuras empiezan a correr tras el niño y la figura. El niño saca su espada de madera de juguete, la cual, ante el sentido
 	del peligro, se convierte en un gran sable destructor. El niño empieza a atacar a las figuras tal y como lo hacía cuando jugaba por su cuenta en el pueblo, y 
 	observaba, al destruir una figura, que podría con todas las demás, pero sabe que al hacer ésto, perdería de vista a la inocente figura que en un principio lo atrajo.
 	El niño, quien, al obtener experiencia en combate, crece y se vuelve mucho más fuerte, y finalmente decide correr tras la figura inocente. Habiendo corrido tanto, 
